# ImageSquasher

./: CMakeLists.txt  README.md  color.h  commander.cpp  commander.h  display.cpp  display.h  image.h  main.cpp  mutator.cpp  mutator.h  types.h  utils.h
